@@ -5,6 +5,7 @@ COPYING
 lib/Travel/Status/DE/DeutscheBahn.pm
 lib/Travel/Status/DE/DeutscheBahn/Result.pm
 MANIFEST			This list of files
+notes
 README
 t/00-compile-pm.t
 t/01-compile-pl.t
@@ -12,4 +13,5 @@ t/10-pod-coverage.t
 t/20-db.t
 t/in/essen.html
 META.yml
+META.json
 SIGNATURE    Added here by Module::Build
