@@ -8,8 +8,9 @@ build_requires:
   Test::More: 0
   Test::Pod: 0
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3603'
+  Module::Build: 0.38
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110440'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,10 +19,10 @@ name: Travel-Status-DE-DeutscheBahn
 provides:
   Travel::Status::DE::DeutscheBahn:
     file: lib/Travel/Status/DE/DeutscheBahn.pm
-    version: 1.00
+    version: 1.01
   Travel::Status::DE::DeutscheBahn::Result:
     file: lib/Travel/Status/DE/DeutscheBahn/Result.pm
-    version: 1.00
+    version: 1.01
 requires:
   Carp: 0
   Class::Accessor: 0.16
@@ -33,4 +34,4 @@ requires:
   perl: v5.10.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.00
+version: 1.01
