@@ -16,32 +16,34 @@ Hash: SHA256
 
 SHA1 8146267b09af8157aa67eb220b0b6ad3d5c61303 Build.PL
 SHA1 d0f2060d740ce428f14c47b7f9cc2c65bf66cd7b COPYING
-SHA1 3a54b87e35a5054b5763b588a57a56eb17b8b7ac Changelog
-SHA1 5b8d2906dbb6c04294f788abfd8a27ed3224393b MANIFEST
-SHA1 8dd9dbc8c7e57c42d9343d96616a4374f73f22cf META.yml
-SHA1 bbff2d44f9fa2c89eb7666e6154eec9e810de913 README
-SHA1 917f2e3237520f39a077d23f8feae138104a7569 bin/db-ris
-SHA1 91ab8516822f473d2fe1803ed12d51723c038b48 lib/Travel/Status/DE/DeutscheBahn.pm
-SHA1 ff086ec9ce75a788d95d4e308100a88adfffd691 lib/Travel/Status/DE/DeutscheBahn/Result.pm
+SHA1 510e32fc74b44a1adcce6407f2c195649eb7ecb6 Changelog
+SHA1 b9373c2157f87fc6c0c9ab77613d3c5e3c557729 MANIFEST
+SHA1 19630579838494fe031bb48f0c72c107ec5effbc META.json
+SHA1 c4ec5fde11bce95e2c9a141dc418906246a5f74a META.yml
+SHA1 4a31b074672283c0780f6ea2d9130b1d0451b972 README
+SHA1 2d0fe1ae17e1d665188296ea5baac35ee326edc3 bin/db-ris
+SHA1 db7e03bd520ebe86094357f8905e22938ed8b79f lib/Travel/Status/DE/DeutscheBahn.pm
+SHA1 61f3abe6ed25bbcd8d0aaf20b3d73f16937a44e5 lib/Travel/Status/DE/DeutscheBahn/Result.pm
+SHA1 9441ffa5b6c46987c481aff09e1ba0893c946afc notes
 SHA1 6cfaebdb4d57688b8ac50f3e840a99a48c15457b t/00-compile-pm.t
 SHA1 3adfc7da6082f15051da7fbda884723388738b61 t/01-compile-pl.t
 SHA1 fd251ffc56ca6e52020c906b61158f78b035679d t/10-pod-coverage.t
-SHA1 6e4cd6b1ee01c7ca0aa777cc963db54a40fc5e0d t/20-db.t
+SHA1 ec8aa199103cc695b0a5204ebf88840f94dbd002 t/20-db.t
 SHA1 d406786e99f134d2dcf15a220370ca17693c5a93 t/in/essen.html
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
-iQIcBAEBCAAGBQJOY6tFAAoJEBANW/tRZuAF88YP/i2fQkxuzM979bVHaGzDgfqz
-7OfbKEgOjzSqTPvLWQ6HMfCZJ0d2ukQ8UWXWIIHjW27CAJl0+Qpuo1Jj6WYc07Ee
-vXjp2RoBzydcaAc1QQC8M70kFxHxcxWqtn9nrAFZ+rBWxaZAIBYy75iQrA9UC6HM
-QFdTn75RFdDIEvvv4QFAhXYwGp9ctcG8xqG8E3Z3F6xVTiwO7SoVcJiE0+8adTMo
-yg6wDHXhq4chkYXxBT2PCr0N/MjW2Y1nHmXMKKE8ZV5aBSAAYzPeblMISLtf3xQF
-sXm1ht0DqlwX6KA0drKLJYMmzp/x5hHqlRuzCwPyY0RL97cYsWGLRbOQ4ciKDWl+
-oRvaGLyJnSqgIhptgwh42ZZfurvsMvrdd0yOPjzXGj04jtrgYAALAsIbYR4SdEZV
-x9wsnqQUwBBf/xvl/udmrWnDXzoQ5bmcDVIuLx86xe7CYWQo6ryNwOvy3gQzru0W
-3+G2MghRpotfJxU+1tPxVmtHQXpajNH2TYNd7q6G0cXRbKDYSm+oOTHdARtcZVl9
-rcUn/elMmlpJk/LY6Ec2oqNXJDWZoOmqvIcokOf/cjnGYmVW3YYTX1f6T7QkIklp
-+irHq/d3t/2bpd4OaYsWfZPOTrVRMoZfXKwvaXE+fhPjWd2D005qVtfEMA4L51T8
-wPGWg0mf9TFQIAVc8Zdp
-=3LVg
+iQIcBAEBCAAGBQJO2jFyAAoJEBANW/tRZuAF0I4P/0p1UjUlKd4EJZUBHbXrxrr6
+VeDObvb4Lr6AJy7KERn5b/c9lLrSEFZKu0LYcTY30UXagK4DwH/X7igq6rmb5nZz
+F4420q555a1bxlC6WQ52JLqHcDTffrHvPe60pqOgkIHmqWCntfQMBm2Qi+cIqliu
+ve5BXgJN2z53gZkSKm/8jPIqE8Ql4p8S43312+iPUKY1q+68nvZX/yj+PxGOs7pI
+37DPKhluh8lOSsCyOv+61bZPbgNQsYa0EVew/sFBTsTqOSx1DgYpJRrPiNP7w65g
+b09Dgvo6U19hPSw1HiVCsYsoU9DqsbgZ8V5KsgG910DAAdLHhGFiZIWGKmK/fO4p
+FjmT+hw1MMBQIHb5ugsjQgLdwJL2nlu3vFZtG570A+caA+IZcwg0NqCXIEiZU2gl
+5PXY6SX4D1ANStL/iehM7MTeGDnHm87ZgTaQBqOHjZFMem/ZF01AHRjKPH9x32wR
+wV7rrtvTKdhk+caJqw5lS3Cx3iSu/Y5DUszNLaz82JNYJjt0w+RlGBnhj2Wg1CBP
+yHvscmAIkIdX9uCv+fJqkzYUO0usWgvR52BVvtc6BQpdXt8+/V/sxKA3PCG8wPxf
+j79nRifv/U7GTcIJ44lRo+NzowqXO5opARNouR8nZDrcfmjSJkAsWmCIwq63R3hy
+A4hyvggcGRuLUFcul+fs
+=Wons
 -----END PGP SIGNATURE-----
