@@ -1,3 +1,14 @@
+Travel::Status::DE::DeutscheBahn 1.01 - Sat Dec 03 2011
+
+    * Detect ambiguous input errors (available via errstr)
+    * Add language switch for additional information (german/english)
+
+    [Travel::Status::DE::DeutscheBahn::Result]
+    * Result: Add line (== train) and date accessors
+
+    [db-ris]
+    * Add -l / --lang option
+
 Travel::Status::DE::DeutscheBahn 1.00 - Sun Sep 04 2011
 
     [db-ris]
